[package]
name = "yolo_detector"
version = "0.3.0"
authors = ["Elieren https://github.com/Elieren"]
edition = "2021"
description = "YOLO object detection wrapper for OpenCV and ONNX in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Elieren/yolo_detector"
readme = "README.md"                                                      # указание на файл с описанием
categories = ["computer-vision", "science"]
keywords = ["yolo", "onnx", "opencv", "object-detection"]


[dependencies]
opencv = "0.94.4"
rand = "0.9.1"
ort = "1.16.3"
ndarray = "=0.15.6"
anyhow = "1.0.98"
